
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int symbolS ;
struct TYPE_2__ {scalar_t__ X_op; int * X_op_symbol; int * X_add_symbol; } ;


 scalar_t__ O_big ;
 TYPE_1__* symbol_get_value_expression (int *) ;

__attribute__((used)) static int
walk_no_bignums (symbolS * sp)
{
  if (symbol_get_value_expression (sp)->X_op == O_big)
    return 1;

  if (symbol_get_value_expression (sp)->X_add_symbol)
    return (walk_no_bignums (symbol_get_value_expression (sp)->X_add_symbol)
     || (symbol_get_value_expression (sp)->X_op_symbol
  && walk_no_bignums (symbol_get_value_expression (sp)->X_op_symbol)));

  return 0;
}
